# hieudoanm.archived

./: .gitattributes  .gitconfig  .gitignore  .prettierignore  .yarnrc.yaml  Makefile  README.base.md  README.md  TODO.md  biome.json  docker-compose.yaml  dprint.json  jest.config.ts  main.ipynb  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  tailwind.config.ts  tsconfig.json  turbo.json
.github/workflows/: chess-continuous-delivery.yaml  chess-continuous-integration.yaml  chess-sync-games.yaml  chess-sync-titled.yaml  codeql.yml  continuous-delivery.yaml  continuous-integration-continuous-delivery.yaml  continuous-integration-go.yaml  continuous-integration-python.yaml  continuous-integration-typescript.yaml  continuous-integration.yaml  cronjob-chess-sync-games.yaml  cronjob-chess-sync-titled.yaml  (+8 more)
.husky/: pre-commit
concepts/: README.md
configuration/: README.md
data/: csv.ipynb  files.ipynb  main.ipynb  md.ipynb  repositories.json  requirements.txt
docker/: README.md  docker-compose.yaml
docs/: 404.html  500.html  README.md  fallback-SROZ7biOolrSQXVbThU4a.js  index.html  sw.js
go/: README.md
languages/: README.md
languages/rust/backend/hyper/: Cargo.toml
markdown/: README.md
prisma/: .gitignore  README.md  package.json  schema.prisma
public/: fallback-z4yme3WHBSJmUR1uufyTB.js  sw.js
python/: package.json
scripts/: clone.sh  docker.bash  extensions.sh  extensions.txt  git.bash  hieu.bash  pull.sh  windows.bash
svg/: README.md  package.json
terraform/: main.tf
typescript/: README.md  package.json
(+32414 files in other folders)
