[package]
name = "hyper-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
hyper = { version = "=1.4.1", features = ["full"] }
tokio = { version = "=1.39.3", features = ["full"] }
http-body-util = "=0.1.2"
hyper-util = { version = "=0.1.7", features = ["full"] }
bytes = "=1.7.1"
