[package]
name = "rs-hyper"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
hyper = { version = "=1.5.0", features = ["full"] }
tokio = { version = "=1.41.0", features = ["full"] }
http-body-util = "=0.1.2"
hyper-util = { version = "=0.1.10", features = ["full"] }
bytes = "=1.8.0"
